# 2025HuaweiCodeCraft

./: .gitignore  README.md  run.bat
interactor/linux/: interactor
interactor/macos/: interactor
src/: CMakeLists.txt  delete_action.cpp  globals.cpp  globals.h  main.cpp  read_action.cpp  timestamp.cpp  utils.cpp  write_action.cpp
test1602/: main.cpp
